# vscraper-docker

./: .dockerignore  .gitignore  README.md  docker-compose.yml
client/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
client/src/: App.css  App.tsx  Homepage.tsx  main.tsx  types.ts
client/src/components/: TextInputWithButton.tsx
server/: Cargo.toml
server/.sqlx/: query-31f254d43ad94b61f571c84e88ce5674331d01c47323fe1c43d1b5c1126a8f3d.json  query-8200344b8213d706dbd72e408dbdd12b7ef89cc228ef4602775e9064abf5e52b.json  query-9cd32132c7c89f61cf7b0a5a451d8749cc6f6d4b713296a18c746612f66d59b7.json
server/data/: init.sql
server/migrations/: 20251217012013_init_tables.sql
server/src/: error.rs  lib.rs  main.rs  ytdlp.rs
server/src/api/: config.rs  mod.rs  ytdlp.rs
server/src/core/: mod.rs  ytdlp.rs
