[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.7", features = ["ws", "macros"] }
dotenv = "0.15.0"
envy = "0.4.2"
futures-util = "0.3.31"
regex = "1.12.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
url = "2.5.7"
